--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div><input type="text" class="tela" id="display" placeholder="0" disabled></input></div>
         <div class="botoes">
             <div>
-                <button type="button" class="botao limpar">ac</button>
+                <button type="button" class="botao limpar">c</button>
                 <button type="button" class="botao especial" value="/" onclick="addNumero('/')">/</button>
             </div>
             <div>
